sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: type int
  var i : int = 0;
          ^AlgBubbleSort1:4: error: not found: type int
  var j : int = 0;
          ^AlgBubbleSort1:11: error: value += is not a member of Int
      i+=1;
       ^AlgBubbleSort1:12: error: value += is not a member of Int
      j+=1;
       ^