sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i : int = 0;
  var j : int = 0;
  for (i<-0 to 10){
    for(j<- i+1 to 10){
      if(plusPetit(j,i)){
        echange(j,i);
      }
      
      i+=1;
      j+=1;
    }
  }
}